Do not set a specific z-index for the datepicker as it (now) automatically sets its z-index to a very high value. This is needed to use it on top of dialogs, for example. It seems that these lines, which were originally introduced as fix for bug#6262 are no longer needed.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.42 $
+ * @version     $Revision: 1.43 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -563,10 +563,6 @@ tbody tr:hover span.UnreadArticles {
 
 .RTL .DatepickerIcon {
     margin: 0 4px 0 0;
-}
-
-#ui-datepicker-div {
-    z-index: 20 !important;
 }
 
 /* Vacation Days */
